# CPPFullBackend

./: .gitattributes  .gitignore  AUDIT.md  CMakeLists.txt  CMakePresets.json  GenerateCerts.bat  LICENSE  README.md  cpp.hint  vcpkg.json
Backend/: CMakeLists.txt  Main.cpp  Main.h  appsettings.json
Backend/Console/: Console.h
Backend/DependencyInjection/: DependencyInjectionConfig.cpp  DependencyInjectionConfig.h
Backend/Mapper/: MapperConfig.cpp  MapperConfig.h
Interfaces/: CMakeLists.txt
Interfaces/BusinessServiceInterface/: CMakeLists.txt  IProductService.h
Interfaces/DataServiceInterface/: CMakeLists.txt  IProductRepository.h
Services/: CMakeLists.txt
Services/APIGateway/: APIGateway.h  CMakeLists.txt  ProductGateway.cpp  ProductGateway.h
Services/APIGateway/ProductGateway/: ProductGateway.cpp  ProductGateway.h
Services/BusinessService/: BusinessService.h  CMakeLists.txt  ProductService.cpp  ProductService.h
Services/BusinessService/ProductService/: ProductService.cpp  ProductService.h
Services/DataService/: CMakeLists.txt  DataService.h  ProductRepository.cpp  ProductRepository.h
Services/DataService/DBUtils/: DBUtils.cpp  DBUtils.h
Services/DataService/ProductRepository/: ProductRepository.cpp  ProductRepository.h
Shared/: CMakeLists.txt
Shared/Entities/: CMakeLists.txt  Entities.h  PrdProduct.h
Shared/Entities/PRD/: Prd.h  PrdProduct.h
Shared/Models/: CMakeLists.txt  Models.h  Product.h
Shared/Models/PRD/: PRD.h  Product.h
Shared/SystemFramework/: CMakeLists.txt  SystemFramework.cpp  SystemFramework.h
Shared/SystemFramework/DependencyInjection/: DependencyContainer.h  ScopedContainer.h
Shared/SystemFramework/Gateway/: GatewayBase.h
Shared/SystemFramework/Logging/: ILogger.h  Logger.cpp  Logger.h  LoggerColours.h  Logging.h
Shared/SystemFramework/Mapping/: Mapping.h
Shared/SystemFramework/Nullable/: Nullable.h  NullableException.h
